# bazel-rules-openssl

./: BUILD.bazel  BUILD.nasm.bazel  BUILD.openssl.bazel  BUILD.perl.bazel  README.md
bazel/: deps.bzl  repos.bzl
